# tau-llvm-plugin

./: .dockerignore  CMakeLists.txt  LICENSE.md  README.md  README.org
docker/: .gitignore  centos-dev.Dockerfile  centos-pkg-base.Dockerfile  makefile  plugin.Dockerfile
lib/: CMakeLists.txt  Instrument.cpp
sandbox/: rt_run.sh
sandbox/etc/: mandel.cc  pfor-dist.cc  pfor.c  pfor.cc  simd.cc
